version 0.5.5 (development)
- small changes for compatibility with 'spdep' version 1.3-6
- new 'Data_MultiCancer' object

version 0.5.4
- small bugs fixed and performance improvements
- package built for R-4.4

version 0.5.3
- bugs fixed
- faster implementation of divide_carto() function

version 0.5.2
- 'X' argument included to STCAR_INLA() function
- changes in mergeINLA() function

version 0.5.1
- small bugs fixed
- new 'inla.mode' and 'num.threads' argument for CAR_INLA(), STCAR_INLA() and MCAR_INLA() functions
- adaptation of STCAR_INLA function for spatio-temporal predictions

version 0.5.0
- new MCAR_INLA() function to fit scalable spatial multivariate CAR models
- changes in mergeINLA() function
- development of additional auxiliary functions

version 0.4.2
- small bugs fixed
- new merging strategy

version 0.4.1
- small bugs fixed
- version submitted to CRAN

version 0.4.0
- new STCAR_INLA() function to fit scalable spatio-temporal CAR models

version 0.3.2
- 'X' and 'confounding' arguments included to CAR_INLA() function
- new function included: clustering_partition

version 0.3.1
- 'W' argument included to CAR_INLA() function

version 0.3.0
- parallel and distributed computation strategies when fitting inla models with the CAR_INLA function

version 0.2.2
- new arguments included to random_partition function

version 0.2.1
- Carto_SpainMUN data changed

version 0.2.0
- speedup improvements in mergeINLA function
- small bugs fixed