@@ -2,7 +2,7 @@ Package: bigDM
 Type: Package
 Title: Scalable Bayesian Disease Mapping Models for High-Dimensional Data
 Version: 0.5.5
-Date: 2024-06-19
+Date: 2024-08-12
 Authors@R: 
   c(person(given = "Aritz",
            family = "Adin",
