@@ -92,7 +92,8 @@ When using this package, please cite the following papers:
 ```
 news(package="bigDM")
 ```
-__Changes in version 0.5.5__ (2024 Jun 19)
+__Changes in version 0.5.5__ (2024 Aug 12)
+* condition for the upcoming release of `tmap` v4
 * small changes for compatibility with `spdep` version 1.3-6
 * new `Data_MultiCancer` object
 
