@@ -1,4 +1,5 @@
 version 0.5.5 (development)
+- condition for the upcoming release of 'tmap' v4
 - small changes for compatibility with 'spdep' version 1.3-6
 - new 'Data_MultiCancer' object
 
